# Fin-Analysis

./: FINBERT_GUIDE.md  README.md  StockNewsAnalyzer.spec  StockNewsAnalyzer_standalone.spec  UI_DESIGN.md  build_app.sh  config.json  create_app_bundle.py  gui_app.py  hook-transformers.py  pyproject.toml  requirements.txt  requirements_gui.txt  run_app.py  setup.py  stock_news.db  stock_news_analyzer.py  用户手册.md
StockNewsAnalyzer.app/Contents/: Info.plist
StockNewsAnalyzer.app/Contents/MacOS/: StockNewsAnalyzer
StockNewsAnalyzer.app/Contents/Resources/: config.json  lightweight_analyzer.py  stock_news.db  test_finbert.py
