[project]
name = "fin-analysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pyinstaller>=6.14.1",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "textblob>=0.19.0",
    "torch>=2.7.1",
    "transformers>=4.53.0",
    "tqdm>=4.27",
    "numpy>=1.17",
    "tokenizers>=0.21.0",
    "huggingface-hub>=0.30.0",
    "safetensors>=0.4.3",
    "PyYAML>=5.1",
    "regex>=2019.12.17",
    "filelock>=3.0",
    "packaging>=20.0",
]
